--- a/themes/shd/layouts/_default/baseof.html
+++ b/themes/shd/layouts/_default/baseof.html
@@ -3,12 +3,12 @@
 <head>
   {{ partial "head.html" . }}
 </head>
-<body class="container-xxl mx-auto w-full ">
-  <main class="p-5 border-x-2 shadow-md shadow-black letter">
+<body class="container-xxl mx-auto w-full py-4 print:p-0 print:m-0 print:container print:w-screen print:max-w-full">
+  <main class="p-5 border-x-2 shadow-md shadow-black letter w-full print:border-x-0 print:shadow-none">
     {{ block "main" . }}{{ end }}
 
     <div class="letter-logo"></div>
-    <div class="paper-overlay"></div>
+    <div class="paper-overlay print:hidden"></div>
   </main>
 </body>
 </html>
