--- a/themes/shd/layouts/partials/agent/avatar.html
+++ b/themes/shd/layouts/partials/agent/avatar.html
@@ -2,7 +2,7 @@
 
 {{ $image := "avatar.webp" }}
 {{ with .Page.Resources.GetMatch "avatar" }}
-  <img class="rotate-1 print:rotate-0 photo" src="{{ .RelPermalink }}" width="256px" height="256px" alt="">
+  <img class="md:rotate-1 print:rotate-0 photo" src="{{ .RelPermalink }}" width="256px" height="256px" alt="">
 {{ else }}
-  <img class="rotate-1 print:rotate-0 photo" src="/default.png" width="256px" height="256px" alt="">
+  <img class="md:rotate-1 print:rotate-0 photo" src="/default.png" width="256px" height="256px" alt="">
 {{ end }}
